--- a/package.json
+++ b/package.json
@@ -34,5 +34,12 @@
     "tls": false,
     "zlib": false,
     "timers": false
+  },
+  "devDependencies": {
+    "@frsource/cypress-plugin-visual-regression-diff": "^3.3.10",
+    "@percy/cypress": "^3.1.2",
+    "happo-cypress": "^4.1.3",
+    "happo-e2e": "^2.4.1",
+    "happo.io": "^9.1.2"
   }
 }
